Added Task 2 - Code

--- a/Exercise 3/transferlearning.ipynb
+++ b/Exercise 3/transferlearning.ipynb
@@ -1879,12 +1879,21 @@
     "model_pneumonia_transfer_frozen = Net(in_channels=n_channels_pneumonia, num_classes=2).to(device)\n",
     "\n",
     "# TODO: Transfer the weights of the ENCODER from the chest model to the pneumonia model\n",
-    "model_pneumonia_transfer_frozen.load_state_dict(model_chest_full.state_dict())\n",
+    "model_pneumonia_transfer_frozen.layer1.load_state_dict(model_chest_full.layer1.state_dict())\n",
+    "model_pneumonia_transfer_frozen.layer2.load_state_dict(model_chest_full.layer2.state_dict())\n",
+    "model_pneumonia_transfer_frozen.layer3.load_state_dict(model_chest_full.layer3.state_dict())\n",
+    "model_pneumonia_transfer_frozen.layer4.load_state_dict(model_chest_full.layer4.state_dict())\n",
     "\n",
     "# TODO: Freeze all layers except the FC\n",
     "for name, param in model_pneumonia_transfer_frozen.named_parameters():\n",
     "    if 'fc' not in name:  # Exclude FC layers\n",
     "        param.requires_grad = False\n",
+    "\n",
+    "#for param in model_pneumonia_transfer_frozen.parameters():\n",
+    "#    param.requires_grad = False\n",
+    "#\n",
+    "#for param in model_pneumonia_transfer_frozen.fc.parameters():\n",
+    "#    param.requires_grad = True\n",
     "\n",
     "# Initialize the optimizer\n",
     "optimizer_pneumonia_transfer_frozen = optim.SGD(model_pneumonia_transfer_frozen.parameters(), lr=lr, momentum=0.9)"
@@ -2104,8 +2113,12 @@
     "test_embeddings_flat = test_embeddings.view(test_embeddings.size(0), -1).cpu().numpy()\n",
     "\n",
     "# TODO: Apply PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "pca_result = pca.fit_transform(test_embeddings_flat)\n",
     "\n",
     "# TODO: Apply t-SNE\n",
+    "t_sne = TSNE(n_components=2)\n",
+    "tsne_result = t_sne.fit_transform(test_embeddings_flat)\n",
     "\n",
     "# Plot PCA result\n",
     "plot_embeddings(pca_result, test_labels.cpu(), 'PCA of Train Embeddings')\n",
@@ -2130,6 +2143,7 @@
     "model_pneumonia_transfer_trainable = Net(in_channels=n_channels_pneumonia, num_classes=2).to(device)\n",
     "\n",
     "# TODO: Transfer the weights from the chest model to the pneumonia model\n",
+    "model_pneumonia_transfer_trainable.load_state_dict(model_chest_full.state_dict())\n",
     "\n",
     "# Initialize the optimizer\n",
     "optimizer_pneumonia_transfer_trainable = optim.SGD(model_pneumonia_transfer_trainable.parameters(), lr=lr, momentum=0.9)"
@@ -2180,9 +2194,13 @@
     "# Flatten the embeddings\n",
     "test_embeddings_flat = test_embeddings.view(test_embeddings.size(0), -1).cpu().numpy()\n",
     "\n",
-    "# TODO: Apply PCA\n",
+    "# DONE: Apply PCA\n",
+    "pca = PCA(n_components=2)\n",
+    "pca_result = pca.fit_transform(test_embeddings_flat)\n",
     "\n",
-    "# TODO: Apply t-SNE\n",
+    "# DONE: Apply t-SNE\n",
+    "t_sne = TSNE(n_components=2)\n",
+    "tsne_result = t_sne.fit_transform(test_embeddings_flat)\n",
     "\n",
     "# Plot PCA result\n",
     "plot_embeddings(pca_result, test_labels.cpu(), 'PCA of Train Embeddings')\n",
@@ -2215,7 +2233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
