Fixed prints of experimental trainings

--- a/Exercise 8/Task1_Diferrentially_private_model_training.ipynb
+++ b/Exercise 8/Task1_Diferrentially_private_model_training.ipynb
@@ -2565,78 +2565,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:   5%|▌         | 1/20 [00:02<00:51,  2.70s/epoch]"
+      "Epoch:   5%|▌         | 1/20 [00:02<00:50,  2.66s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.757498 Acc: 72.909903 \n"
+      "\tValidation set: Loss: 0.639385 Acc: 78.216315 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  30%|███       | 6/20 [00:14<00:33,  2.37s/epoch]"
+      "Epoch:  10%|█         | 2/20 [00:05<00:47,  2.62s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.397067 Acc: 87.205763 \n"
+      "\tValidation set: Loss: 0.474023 Acc: 84.172078 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  55%|█████▌    | 11/20 [00:26<00:22,  2.49s/epoch]"
+      "Epoch:  15%|█▌        | 3/20 [00:07<00:44,  2.63s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.414685 Acc: 88.139205 \n"
+      "\tValidation set: Loss: 0.475487 Acc: 83.456778 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  80%|████████  | 16/20 [00:38<00:10,  2.52s/epoch]"
+      "Epoch:  20%|██        | 4/20 [00:10<00:41,  2.62s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.432387 Acc: 89.311080 \n"
+      "\tValidation set: Loss: 0.356364 Acc: 87.718141 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 20/20 [00:48<00:00,  2.44s/epoch]\n"
+      "Epoch:  25%|██▌       | 5/20 [00:13<00:39,  2.63s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tTest set: Loss: 0.387899 Acc: 90.547595 \n",
-      "BloodMNIST Top1 Acc:  0.9054759504608294\n"
+      "\tValidation set: Loss: 0.671405 Acc: 79.403409 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  30%|███       | 6/20 [00:15<00:36,  2.64s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.417327 Acc: 85.541802 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  35%|███▌      | 7/20 [00:18<00:34,  2.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.294049 Acc: 89.417614 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  40%|████      | 8/20 [00:21<00:31,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.468063 Acc: 85.582386 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  45%|████▌     | 9/20 [00:23<00:28,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.345473 Acc: 89.488636 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  50%|█████     | 10/20 [00:26<00:26,  2.64s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.231742 Acc: 92.106331 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  55%|█████▌    | 11/20 [00:29<00:24,  2.67s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.594443 Acc: 84.390219 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  60%|██████    | 12/20 [00:31<00:21,  2.67s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.549433 Acc: 86.120130 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  65%|██████▌   | 13/20 [00:34<00:18,  2.65s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.371689 Acc: 89.037135 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  70%|███████   | 14/20 [00:36<00:15,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.323648 Acc: 91.304789 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  75%|███████▌  | 15/20 [00:39<00:13,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.310255 Acc: 91.832386 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  80%|████████  | 16/20 [00:42<00:10,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.334376 Acc: 90.777192 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  85%|████████▌ | 17/20 [00:44<00:07,  2.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.647635 Acc: 85.100446 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  90%|█████████ | 18/20 [00:47<00:05,  2.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.523336 Acc: 87.865260 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  95%|█████████▌| 19/20 [00:50<00:02,  2.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.351681 Acc: 90.356128 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100%|██████████| 20/20 [00:52<00:00,  2.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.257803 Acc: 92.943385 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tTest set: Loss: 0.292437 Acc: 92.005688 \n",
+      "BloodMNIST Top1 Acc:  0.920056883640553\n"
      ]
     }
    ],
@@ -2657,7 +2881,7 @@
     "\n",
     "for epoch in tqdm(range(EPOCHS), desc=\"Epoch\", unit=\"epoch\"):\n",
     "    train(model_blood, train_loader_blood, optimizer_blood, epoch + 1, device)\n",
-    "    if epoch % 5 == 0:\n",
+    "    if (epoch + 1) % 1 == 0:\n",
     "        eval(model_blood, val_loader_blood, device)\n",
     "\n",
     "top1_acc_blood = test(model_blood, test_loader_blood, device)\n",
@@ -2674,78 +2898,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:   5%|▌         | 1/20 [00:01<00:32,  1.71s/epoch]"
+      "Epoch:   5%|▌         | 1/20 [00:01<00:33,  1.79s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 1.003484 Acc: 65.601729 \n"
+      "\tValidation set: Loss: 0.867709 Acc: 69.267370 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  30%|███       | 6/20 [00:09<00:22,  1.61s/epoch]"
+      "Epoch:  10%|█         | 2/20 [00:03<00:31,  1.75s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.843521 Acc: 69.028424 \n"
+      "\tValidation set: Loss: 0.759003 Acc: 72.036652 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  55%|█████▌    | 11/20 [00:17<00:14,  1.58s/epoch]"
+      "Epoch:  15%|█▌        | 3/20 [00:05<00:29,  1.73s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.932363 Acc: 74.947224 \n"
+      "\tValidation set: Loss: 0.703478 Acc: 74.955951 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch:  80%|████████  | 16/20 [00:24<00:06,  1.55s/epoch]"
+      "Epoch:  20%|██        | 4/20 [00:06<00:27,  1.72s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tValidation set: Loss: 0.939870 Acc: 76.828873 \n"
+      "\tValidation set: Loss: 0.840679 Acc: 67.786735 \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch: 100%|██████████| 20/20 [00:30<00:00,  1.54s/epoch]\n"
+      "Epoch:  25%|██▌       | 5/20 [00:08<00:25,  1.68s/epoch]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tTest set: Loss: 1.210837 Acc: 73.851737 \n",
-      "DermaMNIST Top1 Acc:  0.7385173672241784\n"
+      "\tValidation set: Loss: 0.794206 Acc: 72.781333 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  30%|███       | 6/20 [00:10<00:23,  1.65s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.769903 Acc: 74.832114 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  35%|███▌      | 7/20 [00:11<00:21,  1.64s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.770966 Acc: 73.137051 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  40%|████      | 8/20 [00:13<00:19,  1.64s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.913904 Acc: 68.086769 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  45%|████▌     | 9/20 [00:14<00:17,  1.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.916576 Acc: 73.260888 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  50%|█████     | 10/20 [00:16<00:16,  1.63s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.062295 Acc: 68.831449 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  55%|█████▌    | 11/20 [00:18<00:14,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.883386 Acc: 73.473654 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  60%|██████    | 12/20 [00:19<00:12,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.979758 Acc: 73.714262 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  65%|██████▌   | 13/20 [00:21<00:11,  1.61s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.094898 Acc: 71.441988 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  70%|███████   | 14/20 [00:23<00:09,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 0.956906 Acc: 72.746426 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  75%|███████▌  | 15/20 [00:24<00:08,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.145468 Acc: 74.281084 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  80%|████████  | 16/20 [00:26<00:06,  1.61s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.137343 Acc: 72.605136 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  85%|████████▌ | 17/20 [00:27<00:04,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.063114 Acc: 71.646027 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  90%|█████████ | 18/20 [00:29<00:03,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.262500 Acc: 68.716340 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch:  95%|█████████▌| 19/20 [00:31<00:01,  1.62s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.343997 Acc: 67.804189 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 100%|██████████| 20/20 [00:32<00:00,  1.64s/epoch]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tValidation set: Loss: 1.182912 Acc: 71.557098 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tTest set: Loss: 1.223035 Acc: 74.027335 \n",
+      "DermaMNIST Top1 Acc:  0.7402733458039906\n"
      ]
     }
    ],
@@ -2766,7 +3214,7 @@
     "\n",
     "for epoch in tqdm(range(EPOCHS), desc=\"Epoch\", unit=\"epoch\"):\n",
     "    train(model_derma, train_loader_derma, optimizer_derma, epoch + 1, device)\n",
-    "    if epoch % 5 == 0:\n",
+    "    if (epoch + 1) % 1 == 0:\n",
     "        eval(model_derma, val_loader_derma, device)\n",
     "\n",
     "top1_acc_derma = test(model_derma, test_loader_derma, device)\n",
@@ -3117,7 +3565,7 @@
     "\n",
     "for epoch in tqdm(range(EPOCHS), desc=\"Epoch\", unit=\"epoch\"):\n",
     "    train(model_organc, train_loader_organc, optimizer_organc, epoch + 1, device)\n",
-    "    if epoch % 5 == 0:\n",
+    "    if (epoch + 1) % 1 == 0:\n",
     "        eval(model_organc, val_loader_organc, device)\n",
     "\n",
     "top1_acc_organc = test(model_organc, test_loader_organc, device)\n",
