nothing of interest

--- a/Exercise 8/federated_learning.ipynb
+++ b/Exercise 8/federated_learning.ipynb
@@ -1595,6 +1595,7 @@
         "NUM_ROUNDS = 5\n",
         "LOCAL_EPOCHS = 3\n",
         "ATTACK_FN = fgsm\n",
+        "\n",
         "trainloaders, valloaders, testloader = load_data(NUM_CLIENTS, BATCH_SIZE)\n",
         "model = models.resnet18(pretrained=False)\n",
         "\n",
@@ -1651,6 +1652,15 @@
         "    strategy=strategy,\n",
         "    client_resources=client_resources,\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# TODO: evaluate training"
       ]
     }
   ],
